# rust_server_practice

./: README.md
client/: Cargo.toml  cookie.txt
client/src/: main.rs
client_gui/: Cargo.toml
client_gui/src/: helpers.rs  main.rs  send_to_server.rs  structs.rs
client_gui/src/cookie/: cookie.txt
middlewear_for_updating_price/: Cargo.toml
middlewear_for_updating_price/src/: main.rs
server/: Cargo.toml
server/portfolioassets/: portfolio1.json
server/run/: test.sh
server/src/: database.rs  handlers.rs  handlerscrypto.rs  handlerscryptoapi.rs  handlersstocks.rs  main.rs
