[package]
name = "client_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version = "0.36", features = ["ttf", "image"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
